# Oblig3Repo

./: README.md
TwinCat/Oblig3/: Oblig3.project.~u  Oblig3.sln
TwinCat/Oblig3/Oblig3/: Oblig3.tsproj  TrialLicense.tclrs
TwinCat/Oblig3/Oblig3/CraneControl/: CraneControl.plcproj  CraneControl.tmc  GlobalTextList.TcGTLO  LineIDs.dbg  Visualization Manager.TcVMO
TwinCat/Oblig3/Oblig3/CraneControl/POUs/: MAIN.TcPOU
TwinCat/Oblig3/Oblig3/CraneControl/_CompileInfo/: 4BAC7A9E-7EB2-1DBC-E055-F0C199E15EF9.compileinfo
TwinCat/Oblig3/Oblig3/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
TwinCat/Oblig3/Oblig3/_Config/PLC/: CraneControl.xti  CraneControl.xti.bak
ros2_o3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_o3/install/ads_example_package/lib/ads_example_package/: ads_node  crane_controller.py
ros2_o3/install/urdf_tutorial/share/urdf_tutorial/: package.sh
ros2_o3/log/: latest_build
ros2_o3/src/ads_example_package/: CMakeLists.txt
ros2_o3/src/ads_example_package/install/: local_setup.sh  setup.sh  setup.zsh
ros2_o3/src/ads_example_package/install/ads_example_package/share/ads_example_package/: package.sh  package.xml
ros2_o3/src/ads_example_package/install/ads_example_package/share/ads_example_package/launch/: display.launch.py
ros2_o3/src/ads_example_package/install/ads_example_package/share/ads_example_package/urdf/: green_crane.urdf  simple_green_crane.urdf
ros2_o3/src/ads_example_package/log/: latest_build
ros2_o3/src/ads_example_package/src/: ads_node (copy).cpp  ads_node.cpp
ros2_o3/src/test/: sub.py
(+35 files in other folders)
